# tech-job-market-agent

./: .env.example  jobs.db  main.py  pyproject.toml
src/mcp_server/: __init__.py  db.py  models.py  salary.py  seed.py  server.py
src/mcp_server/seed_data/: _generate.py  jobs.json
